--- a/.gitignore
+++ b/.gitignore
@@ -158,6 +158,7 @@ ClientBin/
 *.pfx
 *.publishsettings
 node_modules/
+serilog-sinks-mongodb.sln.GhostDoc.xml
 
 # RIA/Silverlight projects
 Generated_Code/
