--- a/src/Serilog.Sinks.MongoDB/packages.config
+++ b/src/Serilog.Sinks.MongoDB/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MongoDB.Bson" version="2.0.0-beta4" targetFramework="net45" />
-  <package id="MongoDB.Driver" version="2.0.0-beta4" targetFramework="net45" />
-  <package id="MongoDB.Driver.Core" version="2.0.0-beta4" targetFramework="net45" />
+  <package id="MongoDB.Bson" version="2.0.0" targetFramework="net45" />
+  <package id="MongoDB.Driver" version="2.0.0" targetFramework="net45" />
+  <package id="MongoDB.Driver.Core" version="2.0.0" targetFramework="net45" />
   <package id="Serilog" version="1.4.204" targetFramework="net45" />
 </packages>
