--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ version: '{build}'
 build_script:
 - ps: ./Build.ps1 -majorMinor "3.0" -patch "0-beta-$env:APPVEYOR_BUILD_VERSION" -customLogger "C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 artifacts:
-- path: Serilog.*.nupkg
+- path: artifacts\Serilog.Sinks.MongoDB.xproj\packages\Release\Serilog.Sinks.MongoDB.*.nupkg
 deploy:
 - provider: NuGet
   api_key:
