--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,18 @@
 version: '{build}'
+skip_tags: true
+image: Visual Studio 2015
+configuration: Release
+install:
+  - ps: mkdir -Force ".\build\" | Out-Null
+  - ps: Invoke-WebRequest "https://raw.githubusercontent.com/dotnet/cli/rel/1.0.0-preview2/scripts/obtain/dotnet-install.ps1" -OutFile ".\build\installcli.ps1"
+  - ps: $env:DOTNET_INSTALL_DIR = "$pwd\.dotnetcli"
+  - ps: '& .\build\installcli.ps1 -InstallDir "$env:DOTNET_INSTALL_DIR" -NoPath -Version 1.0.0-preview2-003121'
+  - ps: $env:Path = "$env:DOTNET_INSTALL_DIR;$env:Path"
 build_script:
-- ps: ./Build.ps1 -majorMinor "3.0" -patch "0-beta-$env:APPVEYOR_BUILD_VERSION" -customLogger "C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
+- ps: ./Build.ps1
+test: off
 artifacts:
-- path: artifacts\Serilog.Sinks.MongoDB.xproj\packages\Release\Serilog.Sinks.MongoDB.*.nupkg
+- path: artifacts/Serilog.*.nupkg
 deploy:
 - provider: NuGet
   api_key:
@@ -10,4 +20,10 @@ deploy:
   skip_symbols: true
   on:
     branch: /^(master|dev)$/
-
+- provider: GitHub
+  auth_token:
+    secure: p4LpVhBKxGS5WqucHxFQ5c7C8cP74kbNB0Z8k9Oxx/PMaDQ1+ibmoexNqVU5ZlmX
+  artifact: /Serilog.*\.nupkg/
+  tag: v$(appveyor_build_version)
+  on:
+    branch: master
