--- a/src/Serilog.Sinks.MongoDB/project.json
+++ b/src/Serilog.Sinks.MongoDB/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "version": "3.1.0-*",
   "description": "The MongoDB sink for Serilog",
   "authors": [ "Kiran Makkapati", "Serilog Contributors" ],
@@ -16,6 +16,9 @@
 
   "frameworks": {
     "net4.5": {
+      "frameworkAssemblies": {
+        "System.Configuration": "4.0"
+      },
       "dependencies": {
         "MongoDB.Driver": "2.2.3"
       }
