Project dependencies for netstandard1.5 build, conditional around System.Configuration use

--- a/src/Serilog.Sinks.MongoDB/project.json
+++ b/src/Serilog.Sinks.MongoDB/project.json
@@ -22,6 +22,11 @@
       "dependencies": {
         "MongoDB.Driver": "2.2.3"
       }
+    },
+    "netstandard1.5": {
+      "dependencies": {
+        "MongoDB.Driver": "2.3.0"
+      }
     }
   }
 }
