Updated nuget packages to latest version. Updated .gitignore file. Code cleanup and some refactoring. Fixed string == null checking.

--- a/src/Serilog.Sinks.MongoDB/project.json
+++ b/src/Serilog.Sinks.MongoDB/project.json
@@ -9,10 +9,11 @@
     "iconUrl": "http://serilog.net/images/serilog-sink-nuget.png"
   },
 
-  "dependencies": {
-    "Serilog": "2.1",
-    "Serilog.Sinks.PeriodicBatching": "2.0"
-  },
+	"dependencies": {
+					"MongoDB.Driver": "2.3.0",
+		"Serilog": "2.3.0",
+		"Serilog.Sinks.PeriodicBatching": "2.1.0"
+	},
 
   "frameworks": {
     "net4.5": {
@@ -20,12 +21,10 @@
         "System.Configuration": "4.0"
       },
       "dependencies": {
-        "MongoDB.Driver": "2.2.3"
       }
     },
     "netstandard1.5": {
       "dependencies": {
-        "MongoDB.Driver": "2.3.0"
       }
     }
   }
