One more tweak to get the version working again.

--- a/src/Serilog.Sinks.MongoDB/Serilog.Sinks.MongoDB.csproj
+++ b/src/Serilog.Sinks.MongoDB/Serilog.Sinks.MongoDB.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <PackageVersion>4.1.0-$(VersionSuffix)</PackageVersion>
+    <VersionPrefix>4.1.0</VersionPrefix>
     <Authors>Kiran Makkapati, Serilog Contributors</Authors>
     <Copyright>Copyright © Serilog Contributors 2014-2020</Copyright>
     <Description>The MongoDB sink for Serilog</Description>
