--- a/test/Serilog.Sinks.MongoDB.Tests/Serilog.Sinks.MongoDB.Tests.csproj
+++ b/test/Serilog.Sinks.MongoDB.Tests/Serilog.Sinks.MongoDB.Tests.csproj
@@ -5,12 +5,21 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
+      <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
       <PackageReference Include="xunit" Version="2.4.2-pre.12" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\Serilog.Sinks.MongoDB\Serilog.Sinks.MongoDB.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="serilog.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
