--- a/src/Serilog.Sinks.MongoDB/Serilog.Sinks.MongoDB.csproj
+++ b/src/Serilog.Sinks.MongoDB/Serilog.Sinks.MongoDB.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <VersionPrefix>5.1.5</VersionPrefix>
-    <Authors>Kiran Makkapati, Serilog Contributors</Authors>
+    <PackageVersion>5.1.5</PackageVersion>
+    <Authors>Kiran Makkapati, Jaben Cargman, Serilog Contributors</Authors>
     <Copyright>Copyright © Serilog Contributors 2014-2022</Copyright>
     <Description>The MongoDB sink for Serilog</Description>
     <PackageIconUrl>http://serilog.net/images/serilog-sink-nuget.png</PackageIconUrl>
@@ -20,9 +20,9 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.13.1" />
-    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog" Version="2.11.0" />
     <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
-    <PackageReference Include="Serilog.Sinks.PeriodicBatching" Version="2.3.0" />
+    <PackageReference Include="Serilog.Sinks.PeriodicBatching" Version="2.3.1" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
