--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,10 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        dotnet-version: [8.x]
+        mongodb-version: ['5.0']
         
     steps:
     - name: Checkout
@@ -15,7 +19,7 @@ jobs:
     - name: Setup Dotnet
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 6.0.100
+        dotnet-version: ${{ matrix.dotnet-version }}
         
     - name: Install GitVersion
       uses: gittools/actions/gitversion/setup@v0.9.7
@@ -27,6 +31,11 @@ jobs:
       uses: gittools/actions/gitversion/execute@v0.9.7
       with:
         useConfigFile: true
+
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.10.0
+      with:
+        mongodb-version: ${{ matrix.mongodb-version }}        
 
     - name: Run Tests
       run: dotnet test        
