--- a/src/Serilog.Sinks.MongoDB/Serilog.Sinks.MongoDB.csproj
+++ b/src/Serilog.Sinks.MongoDB/Serilog.Sinks.MongoDB.csproj
@@ -3,6 +3,7 @@
 		<TargetFrameworks>netstandard2.1;netstandard2.0;net472</TargetFrameworks>
 		<ProjectGuid>2605ed8c-c12a-42fb-9825-32ffea7b4301</ProjectGuid>
 		<RootNamespace>Serilog.Sinks.MongoDB</RootNamespace>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<LangVersion>12</LangVersion>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
