--- a/src/Serilog.Sinks.MongoDB/Serilog.Sinks.MongoDB.csproj
+++ b/src/Serilog.Sinks.MongoDB/Serilog.Sinks.MongoDB.csproj
@@ -9,7 +9,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<PackageVersion>5.4.0</PackageVersion>
+		<PackageVersion>6.0.0</PackageVersion>
 		<Authors>Kiran Makkapati, Jaben Cargman, Serilog Contributors</Authors>
 		<Copyright>Copyright © Serilog Contributors 2014-2022</Copyright>
 		<Description>The MongoDB sink for Serilog</Description>
@@ -20,7 +20,7 @@
 		<PackageTags>serilog, mongodb</PackageTags>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageReleaseNotes>
-			v5.4 - Upgraded to MongoDB.Driver to version 2.19 due to vulnerabilities.
+			v6.0 - Upgraded to MongoDB.Driver to version 2.28 due to incompatibilities.
 		</PackageReleaseNotes>
     </PropertyGroup>
 
