--- a/src/Serilog.Sinks.MongoDB/Serilog.Sinks.MongoDB.csproj
+++ b/src/Serilog.Sinks.MongoDB/Serilog.Sinks.MongoDB.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1;netstandard2.0;net472</TargetFrameworks>
+		<TargetFrameworks>netstandard2.1;net6.0;net472</TargetFrameworks>
 		<ProjectGuid>2605ed8c-c12a-42fb-9825-32ffea7b4301</ProjectGuid>
 		<RootNamespace>Serilog.Sinks.MongoDB</RootNamespace>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -9,7 +9,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<PackageVersion>6.0.0</PackageVersion>
+		<PackageVersion>7.0.0</PackageVersion>
 		<Authors>Kiran Makkapati, Jaben Cargman, Serilog Contributors</Authors>
 		<Copyright>Copyright © Serilog Contributors 2014-2022</Copyright>
 		<Description>The MongoDB sink for Serilog</Description>
@@ -20,7 +20,7 @@
 		<PackageTags>serilog, mongodb</PackageTags>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageReleaseNotes>
-			v6.0 - Upgraded to MongoDB.Driver to version 2.28 due to incompatibilities.
+			v7.0 - Upgraded to MongoDB.Driver to version 3.0 fixing incompatibilities.
 		</PackageReleaseNotes>
     </PropertyGroup>
 
@@ -53,7 +53,7 @@
 		<PackageReference Include="Serilog" Version="3.1.1" />
 		<PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
 		<PackageReference Include="Serilog.Sinks.PeriodicBatching" Version="3.1.0" />
-		<PackageReference Include="MongoDB.Driver" Version="2.28.0" />
+		<PackageReference Include="MongoDB.Driver" Version="3.0.0" />
 	</ItemGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'net472' ">
