ci: skip NuGet package generation during test runs
Update the GitHub Actions workflow to add `-p:GeneratePackageOnBuild=false`
to the dotnet test command. This prevents unnecessary package creation during
CI test runs, improving build performance.

The project has `<GeneratePackageOnBuild>true</GeneratePackageOnBuild>` set,
which causes packages to be created on every build, including test runs.
Packages are still properly created during the "Pack" step for releases.

Benefits:
- Faster CI test execution
- Cleaner build output
- Packages only created when actually needed (Release builds)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
         useConfigFile: true
 
     - name: Run Tests
-      run: dotnet test        
+      run: dotnet test -p:GeneratePackageOnBuild=false        
         
     - name: Pack
       run: dotnet build -c Release -p:PackageVersion=${{ steps.gitversion.outputs.nuGetVersion }} -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg
